# ocaml-textrazor

./: CHANGELOG.md  README.md  dune-project  textrazor.opam
lib/: client.ml  client.mli  dune
lib/api/: client.ml  client.mli  request.ml  request.mli
lib/models/: account.ml  account.mli  analysis.ml  analysis.mli  configuration.mli  entity.ml  phrase.mli  sentence.mli
lib/models/analysis/: analysis.ml  analysis.mli  category.mli  entailment.mli  entity.mli  property.mli  relation.mli  topic.mli  word.mli
lib/models/dictionaries/: dictionary.ml  dictionary.mli
test/: dune
