opam-version: "2.0"
name: "textrazor"
maintainer: "Richard Degenne <richdeg2@gmail.com>"
version: "dev"
license: "GPL"
depends: [
  "ocaml"
  "uri"
  "lwt_ssl"
  "lwt_ppx"
  "cohttp-lwt-unix"
  "yojson"
  "ppx_deriving_yojson"
  "dune"{build}
  "alcotest"{with-test}
]
build: ["dune" "build" "-p" "textrazor"]
build-test: ["dune" "runtest"]
