opam-version: "2.0"
name: "textrazor"
maintainer: "Richard Degenne <richdeg2@gmail.com>"
authors: ["Richard Degenne <richdeg2@gmail.com>"]
homepage: "https://github.com/Richard-Degenne/ocaml-textrazor"
bug-reports: "https://github.com/Richard-Degenne/ocaml-textrazor/issues"
dev-repo: "git+https://github.com/Richard-Degenne/ocaml-textrazor.git"
version: "0.1.1"
license: " GPL-3.0-or-later"
depends: [
  "ocaml" {>= "4.04.0"}
  "uri"
  "lwt_ssl"
  "lwt_ppx"
  "cohttp-lwt-unix"
  "yojson" {>= "1.6.0"}
  "ppx_deriving_yojson"
  "dune" {>= "1.6"}
  "alcotest"{with-test}
  "odoc" {with-doc}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
description: "An OCaml wrapper for the TextRazor API"
synopsis: "An OCaml wrapper for the TextRazor API"
